{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 15,
  "lineage": "17ab5d4a-4fbd-3a5a-9b65-7b0c52263a85",
  "resources": [
    {
      "module": "module.consul_srv",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20260503",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/patroni-bench/zones/europe-west1-b/disks/consul-srv"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "env": "prb",
              "role": "consul"
            },
            "enable_display": false,
            "id": "projects/patroni-bench/zones/europe-west1-b/instances/consul-srv",
            "instance_id": "1567090057348967613",
            "label_fingerprint": "y05tkSvFToY=",
            "labels": {
              "env": "prb",
              "role": "consul"
            },
            "machine_type": "e2-small",
            "metadata": {
              "block-project-ssh-keys": "true",
              "ssh-keys": "deploy:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFosB2upd2duiOU6ZWnT5OuReEl3wy1EO5CFMiRg8n4l lluesma@patroni-bench\n"
            },
            "metadata_fingerprint": "HrXdplIKzDc=",
            "name": "consul-srv",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.14.79.47",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/patroni-bench/global/networks/prb-network",
                "network_ip": "10.0.1.20",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/patroni-bench/regions/europe-west1/subnetworks/prb-subnet",
                "subnetwork_project": "patroni-bench"
              }
            ],
            "project": "patroni-bench",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/patroni-bench/zones/europe-west1-b/instances/consul-srv",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "consul"
            ],
            "tags_fingerprint": "MmxraX72Rqk=",
            "terraform_labels": {
              "env": "prb",
              "role": "consul"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.prb",
            "module.network.google_compute_subnetwork.prb"
          ]
        }
      ]
    },
    {
      "module": "module.haproxy",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20260503",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/patroni-bench/zones/europe-west1-b/disks/haproxy"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "env": "prb",
              "role": "haproxy"
            },
            "enable_display": false,
            "id": "projects/patroni-bench/zones/europe-west1-b/instances/haproxy",
            "instance_id": "8617040593242352829",
            "label_fingerprint": "kZm3M8PX_ao=",
            "labels": {
              "env": "prb",
              "role": "haproxy"
            },
            "machine_type": "e2-small",
            "metadata": {
              "block-project-ssh-keys": "true",
              "ssh-keys": "deploy:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFosB2upd2duiOU6ZWnT5OuReEl3wy1EO5CFMiRg8n4l lluesma@patroni-bench\n"
            },
            "metadata_fingerprint": "HrXdplIKzDc=",
            "name": "haproxy",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.187.181.108",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/patroni-bench/global/networks/prb-network",
                "network_ip": "10.0.1.30",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/patroni-bench/regions/europe-west1/subnetworks/prb-subnet",
                "subnetwork_project": "patroni-bench"
              }
            ],
            "project": "patroni-bench",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/patroni-bench/zones/europe-west1-b/instances/haproxy",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "haproxy"
            ],
            "tags_fingerprint": "j_16JSJX110=",
            "terraform_labels": {
              "env": "prb",
              "role": "haproxy"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.prb",
            "module.network.google_compute_subnetwork.prb"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "haproxy_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000",
                  "5001",
                  "8404"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-04T19:13:11.947-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/patroni-bench/global/firewalls/prb-network-haproxy-external",
            "log_config": [],
            "name": "prb-network-haproxy-external",
            "network": "https://www.googleapis.com/compute/v1/projects/patroni-bench/global/networks/prb-network",
            "priority": 1000,
            "project": "patroni-bench",
            "self_link": "https://www.googleapis.com/compute/v1/projects/patroni-bench/global/firewalls/prb-network-haproxy-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "haproxy"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.prb"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-05-04T19:13:13.268-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/patroni-bench/global/firewalls/prb-network-internal",
            "log_config": [],
            "name": "prb-network-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/patroni-bench/global/networks/prb-network",
            "priority": 1000,
            "project": "patroni-bench",
            "self_link": "https://www.googleapis.com/compute/v1/projects/patroni-bench/global/firewalls/prb-network-internal",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.prb"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "observer_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000",
                  "5433"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-04T19:13:12.052-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/patroni-bench/global/firewalls/prb-network-observer-external",
            "log_config": [],
            "name": "prb-network-observer-external",
            "network": "https://www.googleapis.com/compute/v1/projects/patroni-bench/global/networks/prb-network",
            "priority": 1000,
            "project": "patroni-bench",
            "self_link": "https://www.googleapis.com/compute/v1/projects/patroni-bench/global/firewalls/prb-network-observer-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "observer"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.prb"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-04T19:13:12.015-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/patroni-bench/global/firewalls/prb-network-ssh",
            "log_config": [],
            "name": "prb-network-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/patroni-bench/global/networks/prb-network",
            "priority": 1000,
            "project": "patroni-bench",
            "self_link": "https://www.googleapis.com/compute/v1/projects/patroni-bench/global/firewalls/prb-network-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "consul",
              "haproxy",
              "observer",
              "patroni"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.prb"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "prb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/patroni-bench/global/networks/prb-network",
            "mtu": 0,
            "name": "prb-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8866262238165789901",
            "project": "patroni-bench",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/patroni-bench/global/networks/prb-network"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-04T19:13:14.905-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/patroni-bench/regions/europe-west1/subnetworks/prb-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "prb-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/patroni-bench/global/networks/prb-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "patroni-bench",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/patroni-bench/regions/europe-west1/subnetworks/prb-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.prb"
          ]
        }
      ]
    },
    {
      "module": "module.observer",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20260503",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/patroni-bench/zones/europe-west1-b/disks/observer"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "env": "prb",
              "role": "observer"
            },
            "enable_display": false,
            "id": "projects/patroni-bench/zones/europe-west1-b/instances/observer",
            "instance_id": "8335584252394794173",
            "label_fingerprint": "-cGM4r0tqYc=",
            "labels": {
              "env": "prb",
              "role": "observer"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "block-project-ssh-keys": "true",
              "ssh-keys": "deploy:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFosB2upd2duiOU6ZWnT5OuReEl3wy1EO5CFMiRg8n4l lluesma@patroni-bench\n"
            },
            "metadata_fingerprint": "HrXdplIKzDc=",
            "name": "observer",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.187.90.64",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/patroni-bench/global/networks/prb-network",
                "network_ip": "10.0.1.40",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/patroni-bench/regions/europe-west1/subnetworks/prb-subnet",
                "subnetwork_project": "patroni-bench"
              }
            ],
            "project": "patroni-bench",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/patroni-bench/zones/europe-west1-b/instances/observer",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "observer"
            ],
            "tags_fingerprint": "6Ln1Fp8BprA=",
            "terraform_labels": {
              "env": "prb",
              "role": "observer"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.prb",
            "module.network.google_compute_subnetwork.prb"
          ]
        }
      ]
    },
    {
      "module": "module.patroni_1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20260503",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/patroni-bench/zones/europe-west1-b/disks/patroni-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "env": "prb",
              "role": "patroni"
            },
            "enable_display": false,
            "id": "projects/patroni-bench/zones/europe-west1-b/instances/patroni-1",
            "instance_id": "8223490167224462525",
            "label_fingerprint": "KYMICi2A9aM=",
            "labels": {
              "env": "prb",
              "role": "patroni"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "block-project-ssh-keys": "true",
              "ssh-keys": "deploy:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFosB2upd2duiOU6ZWnT5OuReEl3wy1EO5CFMiRg8n4l lluesma@patroni-bench\n"
            },
            "metadata_fingerprint": "HrXdplIKzDc=",
            "name": "patroni-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.84.114",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/patroni-bench/global/networks/prb-network",
                "network_ip": "10.0.1.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/patroni-bench/regions/europe-west1/subnetworks/prb-subnet",
                "subnetwork_project": "patroni-bench"
              }
            ],
            "project": "patroni-bench",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/patroni-bench/zones/europe-west1-b/instances/patroni-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "patroni"
            ],
            "tags_fingerprint": "-uknkuLurZg=",
            "terraform_labels": {
              "env": "prb",
              "role": "patroni"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.prb",
            "module.network.google_compute_subnetwork.prb"
          ]
        }
      ]
    },
    {
      "module": "module.patroni_2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20260503",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/patroni-bench/zones/europe-west1-b/disks/patroni-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "env": "prb",
              "role": "patroni"
            },
            "enable_display": false,
            "id": "projects/patroni-bench/zones/europe-west1-b/instances/patroni-2",
            "instance_id": "22836704965881021",
            "label_fingerprint": "KYMICi2A9aM=",
            "labels": {
              "env": "prb",
              "role": "patroni"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "block-project-ssh-keys": "true",
              "ssh-keys": "deploy:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFosB2upd2duiOU6ZWnT5OuReEl3wy1EO5CFMiRg8n4l lluesma@patroni-bench\n"
            },
            "metadata_fingerprint": "HrXdplIKzDc=",
            "name": "patroni-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.199.13.191",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/patroni-bench/global/networks/prb-network",
                "network_ip": "10.0.1.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/patroni-bench/regions/europe-west1/subnetworks/prb-subnet",
                "subnetwork_project": "patroni-bench"
              }
            ],
            "project": "patroni-bench",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/patroni-bench/zones/europe-west1-b/instances/patroni-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "patroni"
            ],
            "tags_fingerprint": "-uknkuLurZg=",
            "terraform_labels": {
              "env": "prb",
              "role": "patroni"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.prb",
            "module.network.google_compute_subnetwork.prb"
          ]
        }
      ]
    },
    {
      "module": "module.patroni_3",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20260503",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/patroni-bench/zones/europe-west1-b/disks/patroni-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "env": "prb",
              "role": "patroni"
            },
            "enable_display": false,
            "id": "projects/patroni-bench/zones/europe-west1-b/instances/patroni-3",
            "instance_id": "4471125533045091517",
            "label_fingerprint": "KYMICi2A9aM=",
            "labels": {
              "env": "prb",
              "role": "patroni"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "block-project-ssh-keys": "true",
              "ssh-keys": "deploy:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFosB2upd2duiOU6ZWnT5OuReEl3wy1EO5CFMiRg8n4l lluesma@patroni-bench\n"
            },
            "metadata_fingerprint": "HrXdplIKzDc=",
            "name": "patroni-3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.38.193.53",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/patroni-bench/global/networks/prb-network",
                "network_ip": "10.0.1.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/patroni-bench/regions/europe-west1/subnetworks/prb-subnet",
                "subnetwork_project": "patroni-bench"
              }
            ],
            "project": "patroni-bench",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/patroni-bench/zones/europe-west1-b/instances/patroni-3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "patroni"
            ],
            "tags_fingerprint": "-uknkuLurZg=",
            "terraform_labels": {
              "env": "prb",
              "role": "patroni"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.prb",
            "module.network.google_compute_subnetwork.prb"
          ]
        }
      ]
    }
  ]
}